# stability-mflds

./: .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.claude/: launch.json
.githooks/: pre-commit
bridgeland_stability/: __init__.py  _latex.py  bg_check.py  block_kronecker.py  chern.py  conjectural_delta.py  delta_sharp.py  dlp.py  dlp_hirzebruch.py  exceptional.py  exceptional_existence.py  exceptional_surface.py  generic_hn.py  hn_filtration.py  mukai.py  nonemptiness_rational.py  nslattice.py  prioritary.py  reduction.py  rigor.py  stability_interval.py  threefold.py  varieties.py  walls.py
docs/: CORRECTIONS.md  FRONTEND_REVAMP_PROMPT.md  GENERALIZATION_FEASIBILITY.md  GOALS.md  HOMOLOGICAL_ALGEBRA_SURVEY.md  LITERATURE_GAP_ANALYSIS.md  ROADMAP.md  WORKED_EXAMPLE_ABELIAN_VS_K3.md
examples/: abelian_vs_k3_walls.py  demo.py
figures/: dlp_curve.html  p3_bg_boundary.html  walls_hilb2_abch.html  walls_hilb4_actual.html  walls_numerical.html
scripts/: e15_m1_v107_probe.py  e15_m2_sweep.py  e15_m3_sweep.py  e16_m1_orbit.py  install-hooks.ps1  install-hooks.sh  m2-wsl.cmd  setup-clone.ps1  setup-clone.sh  strip-obsidian-frontmatter.py
tests/: test__latex.py  test_abelian_k3_walls.py  test_bg_check.py  test_block_kronecker.py  test_bridgeland_verdict.py  test_chern.py  test_conjectural_delta.py  test_delpezzo_mutation_oracle.py  test_delta_monotone.py  test_delta_sharp.py  test_differential.py  test_dlp.py  test_dlp_hirzebruch.py  test_e15_sweep.py  test_e16_orbit.py  test_examples.py  test_exceptional.py  (+22 more)
(+16 files in other folders)
